# OOP

./: .gitignore  README.md
lab_3/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cpp  makefile
lab_3/Builders/: BaseBuilder.cpp  BaseBuilder.h
lab_3/Builders/CameraBuilder/: BaseCameraBuilder.cpp  BaseCameraBuilder.h
lab_3/Builders/ModelBuilder/: BaseModelBuilder.cpp  BaseModelBuilder.h
lab_3/Caretaker/: BaseMemento.h  CameraMemento.cpp  CameraMemento.h  CarcassModelMemento.cpp  CarcassModelMemento.h  Caretaker.cpp  Caretaker.h  CompositeMemento.cpp  CompositeMemento.h  Memento.cpp  Memento.h
lab_3/Caretaker/Memento/: Memento.h
lab_3/Commands/: BaseCommand.h
lab_3/Commands/CameraCommands/: BaseCameraCommand.h  CameraAddCommand.cpp  CameraAddCommand.h  CameraDeleteCommand.cpp  CameraDeleteCommand.h  CameraGetActiveIdCommand.cpp  CameraGetActiveIdCommand.h  CameraSetActiveCommand.cpp  CameraSetActiveCommand.h
lab_3/Commands/DrawCommands/: BaseDrawCommand.h  DrawCommand.cpp  DrawCommand.h
lab_3/Commands/LoadCommands/: BaseLoadCommand.h  LoadCommand.cpp  LoadCommand.h
lab_3/Commands/SceneCommands/: BaseSceneCommand.h  EntityComposeCommand.cpp  EntityComposeCommand.h  EntityDeleteCommand.cpp  EntityDeleteCommand.h  SceneClearCommand.cpp  SceneClearCommand.h
lab_3/Commands/TransformCommands/: BaseTransformCommand.h  EntityMoveCommand.cpp  EntityMoveCommand.h  EntityRestoreStateCommand.cpp  EntityRestoreStateCommand.h  EntityRotateCommand.cpp  EntityRotateCommand.h  EntityScaleCommand.cpp  EntityScaleCommand.h
lab_3/Concepts/: Concepts.h
lab_3/Creators/: VertexStructureCreator.h
lab_3/Creators/BuilderCreator/: BuilderCreator.cpp  BuilderCreator.h
lab_3/Creators/CenterStrategyCreator/: CenterStrategyCreator.h
lab_3/Creators/DirectorCreator/: DirectorCreator.cpp  DirectorCreator.h
lab_3/Creators/DrawFactoryCreator/: DrawFactoryCreator.h
lab_3/Creators/LoadStrategyCreator/: LoadStrategyCreator.h
lab_3/Creators/ManagerCreator/: ManagerCreator.cpp  ManagerCreator.h
lab_3/Creators/MementoCreator/: MementoCreator.h
lab_3/Creators/ProjectionStrategyCreator/: ProjectionStrategyCreator.h
lab_3/Creators/ReaderCreator/: ReaderCreator.cpp  ReaderCreator.h
lab_3/Creators/RemovingInvisibleLinesStrategyCreator/: RemovingInvisibleLinesStrategyCreator.h
lab_3/Creators/VisitorCreator/: VisitorCreator.h
lab_3/Directors/: BaseDirector.cpp  BaseDirector.h
lab_3/Directors/CameraDirector/: CameraDirector.cpp  CameraDirector.h
lab_3/Directors/ModelDirector/: ModelDirector.h
lab_3/Entities/: BaseEntity.h
lab_3/Entities/Composite/: Composite.cpp  Composite.h
lab_3/Entities/InvisibleEntity/: InvisibleEntity.h
lab_3/Exceptions/: BaseException.cpp  BaseException.h
lab_3/Facade/: Facade.cpp  Facade.h
lab_3/ManagerPool/: ManagerPool.cpp  ManagerPool.h  ManagerPoolReader.cpp  ManagerPoolReader.h
lab_3/Managers/: BaseManager.cpp  BaseManager.h
lab_3/Matrix/: Matrix.cpp  Matrix.h  Matrix4.cpp  Matrix4.h
lab_3/Readers/: BaseReader.h
lab_3/Scene/: EntityId.h  Scene.cpp  Scene.h
lab_3/Transform/: TransformArgs.cpp  TransformArgs.h  TransformData.cpp  TransformData.h  TransformKind.h
lab_3/TransformArgs/: TransformArgs.h
lab_3/TransformState/: TransformState.h
lab_3/UI/: mainwindow.cpp  mainwindow.h  plane.cpp  plane.h
lab_3/Visitors/: BaseVisitor.h
lab_3/examples/: cube_offset.txt
lab_4/: CMakeLists.txt  Defines.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  scheme.drawio
lab_4/Buttons/: BaseButton.cpp  BaseButton.h  Button.cpp  Button.h
lab_4/Cabin/: Cabin.cpp  Cabin.h
lab_4/Controller/: Controller.cpp  Controller.h
lab_4/Doors/: Doors.cpp  Doors.h
lab_4/Elevator/: elevator.cpp  elevator.h
lab_4/TaskManager/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h
(+211 files in other folders)
